force-app/main/default/objects/Lead/fields/ACME__Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>ACME__Engagement_Score__c</fullName>
    <label>Engagement Score</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>