force-app/main/default/objects/Lead/fields/ACME__Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>ACME__Lead_Score__c</fullName>
    <label>Lead Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>