force-app/main/default/objects/Lead/fields/ACME_Content_Downloads__c.field-meta.xml
<CustomField>
    <fullName>ACME_Content_Downloads__c</fullName>
    <label>Content Downloads</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Number of content downloads by the lead</description>
</CustomField>