force-app/main/default/objects/Lead/fields/ACME_Demographic_Points__c.field-meta.xml
<CustomField>
    <fullName>ACME_Demographic_Points__c</fullName>
    <label>Demographic Points</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Points calculated from demographic attributes</description>
</CustomField>