force-app/main/default/objects/Lead/fields/ACME_Demographic_Score__c.field-meta.xml
<CustomField>
    <fullName>ACME_Demographic_Score__c</fullName>
    <label>Demographic Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Score representing lead's demographic profile</description>
</CustomField>