force-app/main/default/objects/Lead/fields/ACME_Email_Interactions__c.field-meta.xml
<CustomField>
    <fullName>ACME_Email_Interactions__c</fullName>
    <label>Email Interactions</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Number of email interactions with the lead</description>
</CustomField>