force-app/main/default/objects/Lead/fields/ACME_Engagement_Points__c.field-meta.xml
<CustomField>
    <fullName>ACME_Engagement_Points__c</fullName>
    <label>Engagement Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>