force-app/main/default/objects/Lead/fields/ACME_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>ACME_Engagement_Score__c</fullName>
    <label>Engagement Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>