force-app/main/default/objects/Lead/fields/ACME_EngagementLevel__c.field-meta.xml
<CustomField>
    <fullName>ACME_EngagementLevel__c</fullName>
    <label>Engagement Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cold</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>