force-app/main/default/objects/Lead/fields/ACME_Last_Engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>ACME_Last_Engagement_Date__c</fullName>
    <label>Last Engagement Date</label>
    <type>DateTime</type>
    <description>Date of last lead engagement</description>
</CustomField>