force-app/main/default/objects/Lead/fields/ACME_Last_Score_Calculated__c.field-meta.xml
<CustomField>
    <fullName>ACME_Last_Score_Calculated__c</fullName>
    <label>Last Score Calculated</label>
    <type>DateTime</type>
    <description>Timestamp of last lead score calculation</description>
</CustomField>