force-app/main/default/objects/Lead/fields/ACME_Last_Score_Calculation__c.field-meta.xml
<CustomField>
    <fullName>ACME_Last_Score_Calculation__c</fullName>
    <label>Last Score Calculation</label>
    <type>DateTime</type>
    <description>Timestamp of the last lead score calculation</description>
</CustomField>