force-app/main/default/objects/Lead/fields/ACME_Last_Scored_Date__c.field-meta.xml
<CustomField>
    <fullName>ACME_Last_Scored_Date__c</fullName>
    <label>Last Scored Date</label>
    <type>DateTime</type>
    <description>Timestamp of last lead scoring calculation</description>
</CustomField>