force-app/main/default/objects/Lead/fields/ACME_Last_Scored_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>ACME_Last_Scored_Timestamp__c</fullName>
    <label>Last Scored Timestamp</label>
    <type>DateTime</type>
</CustomField>