force-app/main/default/objects/Lead/fields/ACME_Last_Scoring_Date__c.field-meta.xml
<CustomField>
    <fullName>ACME_Last_Scoring_Date__c</fullName>
    <label>Last Scoring Date</label>
    <type>DateTime</type>
</CustomField>