force-app/main/default/objects/Lead/fields/ACME_LastEngagementDate__c.field-meta.xml
<CustomField>
    <fullName>ACME_LastEngagementDate__c</fullName>
    <label>Last Engagement Date</label>
    <type>DateTime</type>
</CustomField>