force-app/main/default/objects/Lead/fields/ACME_LastScoredDate__c.field-meta.xml
<CustomField>
    <fullName>ACME_LastScoredDate__c</fullName>
    <description>Timestamp of last lead scoring calculation</description>
    <label>Last Scored Date</label>
    <type>DateTime</type>
</CustomField>