force-app/main/default/objects/Lead/fields/ACME_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>ACME_Lead_Score__c</fullName>
    <label>Lead Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Calculated lead score from 0-100</description>
</CustomField>