force-app/main/default/objects/Lead/fields/ACME_Lead_Score_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>ACME_Lead_Score_Last_Updated__c</fullName>
    <label>Lead Score Last Updated</label>
    <type>DateTime</type>
    <description>Timestamp of last lead score calculation</description>
</CustomField>