force-app/main/default/objects/Lead/fields/ACME_LeadScore__c.field-meta.xml
<CustomField>
    <fullName>ACME_LeadScore__c</fullName>
    <description>Automated lead scoring value</description>
    <label>Lead Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>