force-app/main/default/objects/Lead/fields/ACME_Number_of_Email_Interactions__c.field-meta.xml
<CustomField>
    <fullName>ACME_Number_of_Email_Interactions__c</fullName>
    <label>Number of Email Interactions</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Total number of email interactions for the lead</description>
</CustomField>