force-app/main/default/objects/Lead/fields/ACME_Score_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>ACME_Score_Last_Updated__c</fullName>
    <label>Score Last Updated</label>
    <type>DateTime</type>
</CustomField>