force-app/main/default/objects/Lead/fields/ACME_Scoring_Criteria_JSON__c.field-meta.xml
<CustomField>
    <fullName>ACME_Scoring_Criteria_JSON__c</fullName>
    <label>Scoring Criteria JSON</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>JSON representation of lead scoring criteria</description>
</CustomField>