force-app/main/default/objects/Lead/fields/ACME_ScoringLastUpdated__c.field-meta.xml
<CustomField>
    <fullName>ACME_ScoringLastUpdated__c</fullName>
    <label>Scoring Last Updated</label>
    <type>DateTime</type>
</CustomField>