force-app/main/default/objects/Lead/fields/ACME_Website_Visits__c.field-meta.xml
<CustomField>
    <fullName>ACME_Website_Visits__c</fullName>
    <label>Website Visits</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Number of website visits by the lead</description>
</CustomField>