force-app/main/default/objects/Lead/fields/Content_Downloads__c.field-meta.xml
<CustomField>
    <fullName>Content_Downloads__c</fullName>
    <label>Content Downloads</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>