force-app/main/default/objects/Lead/fields/Demographic_Score__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Score__c</fullName>
    <label>Demographic Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
    <description>Score based on job title, company size, and industry</description>
</CustomField>