force-app/main/default/objects/Lead/fields/Downloaded_Whitepaper__c.field-meta.xml
<CustomField>
    <fullName>Downloaded_Whitepaper__c</fullName>
    <label>Downloaded Whitepaper</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates if lead has downloaded a whitepaper</description>
</CustomField>