force-app/main/default/objects/Lead/fields/Email_Opens__c.field-meta.xml
<CustomField>
    <fullName>Email_Opens__c</fullName>
    <label>Email Opens</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>