force-app/main/default/objects/Lead/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <label>Engagement Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
    <description>Score based on lead engagement activities</description>
</CustomField>