force-app/main/default/objects/Lead/fields/Lead_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Lead_Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Qualified</label>
    <type>Checkbox</type>
</CustomField>