force-app/main/default/objects/Lead/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <label>Number of Employees</label>
    <type>Number</type>
    <precision>7</precision>
    <scale>0</scale>
    <description>Total number of employees in the lead's company</description>
</CustomField>