force-app/main/default/objects/Lead/fields/Number_of_Website_Visits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Website_Visits__c</fullName>
    <label>Number of Website Visits</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Total number of website visits by the lead</description>
</CustomField>