force-app/main/default/objects/Lead/fields/Requested_Demo__c.field-meta.xml
<CustomField>
    <fullName>Requested_Demo__c</fullName>
    <label>Requested Demo</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates if lead has requested a demo</description>
</CustomField>