force-app/main/default/objects/Lead/fields/Social_Media_Interactions__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Interactions__c</fullName>
    <label>Social Media Interactions</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Total number of social media interactions by the lead</description>
</CustomField>