force-app/main/default/objects/Lead/fields/Visited_Pricing_Page__c.field-meta.xml
<CustomField>
    <fullName>Visited_Pricing_Page__c</fullName>
    <label>Visited Pricing Page</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>