force-app/main/default/objects/Lead/fields/Website_Visits__c.field-meta.xml
<CustomField>
    <fullName>Website_Visits__c</fullName>
    <label>Website Visits</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>